welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:6: error: not found: value vuBiscuit1
	if(estSurBiscuit()){recule(6);return vuBiscuit1();}else{droite();avance();gauche();}}}
                                             ^Program:4: error: type mismatch;
 found   : Unit
 required: Boolean
while (!vuBiscuit()){
^